Implement audit operation events processing, persistence and querying